# ESP32-and-LoRa-based-Temperature-tracking-and-controlling-Ststem

./: CMakeLists.txt  README.md
Application/: lora.py
main/: CMakeLists.txt  actuation.c  configure.c  lora.c  main.c  main.h  temperature.c
